--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebXR AR Example</title>
   <style>
     body { margin: 0; overflow: hidden; }
@@ -13,10 +15,18 @@
     <button id="createPlane">Создать плоскость</button>
     <button id="getCameraInfo">Получить информацию о камере</button>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.143.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.143.0/examples/jsm/webxr/ARButton.js"></script>
+  <script type="importmap">
+  {
+    "imports": {
+      "three": "https://unpkg.com/three@0.165.0/build/three.module.js",
+      "three/examples/jsm/webxr/ARButton": "https://unpkg.com/three@0.165.0/examples/jsm/webxr/ARButton.js"
+    }
+  }
+  </script>
+  <script type="module">
+    import * as THREE from 'three';
+    import { ARButton } from 'three/examples/jsm/webxr/ARButton.js';
 
-  <script>
     let scene, camera, renderer, reticle;
     let hitTestSource = null;
     let hitTestSourceRequested = false;
@@ -29,17 +39,19 @@
       scene = new THREE.Scene();
 
       camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
+      scene.add(camera);
 
       renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
       renderer.xr.enabled = true;
       document.body.appendChild(renderer.domElement);
 
-      document.body.appendChild(THREE.ARButton.createButton(renderer, { requiredFeatures: ['hit-test'] }));
+      // Добавление ARButton для входа в режим AR
+      document.body.appendChild(ARButton.createButton(renderer, { requiredFeatures: ['hit-test'] }));
 
       reticle = new THREE.Mesh(
         new THREE.RingGeometry(0.05, 0.06, 32).rotateX(- Math.PI / 2),
-        new THREE.MeshBasicMaterial()
+        new THREE.MeshBasicMaterial({ color: 0xffffff })
       );
       reticle.matrixAutoUpdate = false;
       reticle.visible = false;
