--- a/main.html
+++ b/main.html
@@ -114,6 +114,13 @@
       // Показываем элементы интерфейса поверх AR
       document.getElementById('ui').style.display = 'flex';
 
+      // Настройка ретикулы
+      reticle = new THREE.Mesh(
+        new THREE.RingGeometry(0.05, 0.1, 32).rotateX(-Math.PI / 2),
+        new THREE.MeshBasicMaterial({ color: 0xff0000, transparent: true, opacity: 0.5 })
+      );
+      scene.add(reticle);
+
       // Начало анимации
       animate();
     }
