--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
       left: 50%;
       transform: translateX(-50%);
       z-index: 10;
-      display: none; /* Изначально скрыто */
+      /*display: none; /* Изначально скрыто */
       gap: 10px;
     }
     #cameraInfo {
