--- a/main.html
+++ b/main.html
@@ -51,10 +51,7 @@
   </style>
 </head>
 <body>
-  <!-- Кнопка для старта AR -->
   <button id="startARButton">Старт AR</button>
-
-  <!-- Интерфейсные элементы для AR -->
   <div id="ui">
     <button id="createPlane">Создать плоскость</button>
     <button id="getCameraInfo">Получить информацию о камере</button>
@@ -78,12 +75,9 @@
     let hitTestSourceRequested = false;
     let plane = null;
     let planeCreated = false;
-    let raycaster = new THREE.Raycaster();
-    let intersectedObjects = [];
 
     async function init() {
       scene = new THREE.Scene();
-
       camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
       scene.add(camera);
 
@@ -96,7 +90,7 @@
         domOverlay: { root: document.body }
       }));
 
-      const geometry = new THREE.PlaneGeometry(1, 1);
+      const geometry = new THREE.PlaneGeometry(0.1, 0.1);
       const material = new THREE.MeshBasicMaterial({ color: 0x00ff00, side: THREE.DoubleSide });
       reticle = new THREE.Mesh(geometry, material);
       reticle.visible = false;
@@ -106,39 +100,41 @@
       document.getElementById('getCameraInfo').addEventListener('click', getCameraInfo);
 
       window.addEventListener('resize', onWindowResize, false);
-    }
 
-    async function createPlane() {
-      if (reticle.visible && !planeCreated) {
-        planeCreated = true;
-        plane = new THREE.Mesh(
-          new THREE.PlaneGeometry(0.5, 0.5),
-          new THREE.MeshBasicMaterial({ color: 0x00ff00, side: THREE.DoubleSide })
-        );
-        plane.position.setFromMatrixPosition(reticle.matrix);
-        plane.rotation.setFromRotationMatrix(reticle.matrix);
-        scene.add(plane);
+      // Инициализация XR-сессии
+      if (navigator.xr) {
+        navigator.xr.isSessionSupported('immersive-ar')
+          .then((supported) => {
+            if (supported) {
+              document.getElementById('startARButton').addEventListener('click', onRequestSession);
+            } else {
+              console.log('AR не поддерживается на этом устройстве.');
+            }
+          });
       }
     }
 
-    function getCameraInfo() {
-      const quaternion = camera.quaternion.clone();
-      const rotation = new THREE.Euler().setFromQuaternion(quaternion, 'YXZ');
-      const angleToGravity = Math.abs(rotation.x * (180 / Math.PI));
+    async function onRequestSession() {
+      const session = await navigator.xr.requestSession('immersive-ar', { requiredFeatures: ['local', 'hit-test'] });
+      renderer.xr.setSession(session);
+      session.addEventListener('end', onSessionEnded);
+      session.requestReferenceSpace('viewer').then((referenceSpace) => {
+        hitTestSourceRequested = false;
+        session.requestHitTestSource({ space: referenceSpace }).then((source) => {
+          hitTestSource = source;
+          hitTestSourceRequested = true;
+        });
+      });
+      session.requestReferenceSpace('local').then((referenceSpace) => {
+        renderer.xr.setReferenceSpace(referenceSpace);
+        session.requestAnimationFrame(onXRFrame);
+      });
+    }
 
-      const cameraInfoElement = document.getElementById('cameraInfo');
-      
-      if (plane) {
-        const planeWorldPosition = new THREE.Vector3();
-        plane.getWorldPosition(planeWorldPosition);
-        const zDifference = Math.abs(camera.position.z - planeWorldPosition.z);
-        cameraInfoElement.innerHTML = `
-          Угол камеры относительно гравитации: ${angleToGravity.toFixed(2)}°<br>
-          Разница по Z: ${zDifference.toFixed(2)}
-        `;
-      } else {
-        cameraInfoElement.innerHTML = `Плоскость не создана.`;
-      }
+    function onSessionEnded() {
+      hitTestSourceRequested = false;
+      hitTestSource = null;
+      document.getElementById('startARButton').style.display = 'block';
     }
 
     function onWindowResize() {
@@ -153,30 +149,14 @@
 
     function render(timestamp, frame) {
       if (frame) {
-        const referenceSpace = renderer.xr.getReferenceSpace();
         const session = renderer.xr.getSession();
 
-        if (!hitTestSourceRequested) {
-          session.requestReferenceSpace('viewer').then((referenceSpace) => {
-            session.requestHitTestSource({ space: referenceSpace }).then((source) => {
-              hitTestSource = source;
-            });
-          });
-
-          session.addEventListener('end', () => {
-            hitTestSourceRequested = false;
-            hitTestSource = null;
-          });
-
-          hitTestSourceRequested = true;
-        }
-
-        if (hitTestSource) {
+        if (hitTestSourceRequested) {
           const hitTestResults = frame.getHitTestResults(hitTestSource);
 
           if (hitTestResults.length) {
             const hit = hitTestResults[0];
-
+            const referenceSpace = renderer.xr.getReferenceSpace();
             reticle.visible = true;
             reticle.matrix.fromArray(hit.getPose(referenceSpace).transform.matrix);
           } else {
@@ -186,6 +166,12 @@
       }
 
       renderer.render(scene, camera);
+    }
+
+    async function onXRFrame(t, frame) {
+      // Запрашиваем новый кадр
+      await renderer.xr.updateFrame();
+      renderer.setAnimationLoop(render);
     }
 
     init().then(animate);
