--- a/main.html
+++ b/main.html
@@ -124,8 +124,10 @@
           camera.matrix.fromArray(view.transform.matrix);
           camera.projectionMatrix.fromArray(view.projectionMatrix);
           camera.updateMatrixWorld(true);
-
-          zDistance = pose.views[0].transform.position.z;
+          if (flowerInScene) {
+            zDistance = flowerInScene.position.y - pose.views[0].transform.position.z;
+          }
+          
 
           // Update the reticle position based on hit test results
           const hitTestResults = frame.getHitTestResults(hitTestSource);
